More elements used for the game and minimal scoring

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div id="redx" class="state dead">X</div>
     <div id="greenw" class="state win">W</div>
 
+    <div id="hourglass"></div>
+
+    <div id="cardparent">
+        <div id="card">GOOSE</div>
+    </div>
+
     <script src="odometer.min.js"></script>
     <script src="hd.js"></script>
 </body></html>
