more work on animation and transitions

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div id="redx" class="state dead">X</div>
     <div id="greenw" class="state win">W</div>
 
-    <div id="hourglass"></div>
+    <div id="hourglass" class="state think start"></div>
 
-    <div id="cardparent">
-        <div id="card">GOOSE</div>
+    <div id="cardparent" class="state win">
+        <div id="card"><div id="name">GOOSE</div></div>
     </div>
 
     <script src="odometer.min.js"></script>
