--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="odometer-theme-car.css" rel="stylesheet">
 </head><body>
 
-    <div id="horizon" class="state start play dead"><img class="fill" id="horizonimg" src="horizon.jpg"></div>
+    <div id="horizon" class="state start play dead win"><img class="fill" id="horizonimg" src="horizon.jpg"></div>
 
     <div id="clouds"></div>
 
