--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="odometer-theme-car.css" rel="stylesheet">
 </head><body>
 
-    <div id="horizon" class="state start play dead win"><img class="fill" id="horizonimg" src="horizon.jpg"></div>
+    <div id="horizon" class="state pre start play dead win think"><img class="fill" id="horizonimg" src="horizon.jpg"></div>
 
     <div id="clouds"></div>
 
@@ -19,16 +19,22 @@
         <div id="hudtarget"><img id="hudtargetimg" class="fill" src="reticle1.png"></div>
         <div id="hudpings"></div>
     </div>
-    <div id="odometer" class="odometer">30.0</div>
     
     <img id="redx" class="state dead" src="tryagain.png">
-    <div id="greenw" class="state win">W</div>
 
-    <div id="hourglass" class="state think start"></div>
+    <div id="spinners" class="state  think ">
+    <div id="spinr" class="hourglass"></div>
+    <div id="spinb" class="hourglass"></div>
+    <div id="spinw" class="hourglass"></div>
+    </div>
+
+    <img id="logo" class="state pre win think" src="logo.png">
 
     <div id="cardparent" class="state win">
         <div id="card"><div id="name">GOOSE</div></div>
     </div>
+
+    <div id="odometer" class="odometer state start play win think">30.0</div>
 
     <script src="odometer.min.js"></script>
     <script src="perlin.js"></script>
